Updates for lib:token js.evalURI